; ModuleID = '/home/carl/AnghaBench/openwrt/scripts/config/extr_mconf.c_show_textbox_ext.c'
source_filename = "/home/carl/AnghaBench/openwrt/scripts/config/extr_mconf.c_show_textbox_ext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32, i32, i32*, i32*, i32*, i32, i8*)* @show_textbox_ext to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @show_textbox_ext(i8* %0, i8* %1, i32 %2, i32 %3, i32* %4, i32* %5, i32* %6, i32 %7, i8* %8) #0 {
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i8*, align 8
  store i8* %0, i8** %10, align 8
  store i8* %1, i8** %11, align 8
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32* %4, i32** %14, align 8
  store i32* %5, i32** %15, align 8
  store i32* %6, i32** %16, align 8
  store i32 %7, i32* %17, align 4
  store i8* %8, i8** %18, align 8
  %19 = call i32 (...) @dialog_clear()
  %20 = load i8*, i8** %10, align 8
  %21 = load i8*, i8** %11, align 8
  %22 = load i32, i32* %12, align 4
  %23 = load i32, i32* %13, align 4
  %24 = load i32*, i32** %14, align 8
  %25 = load i32*, i32** %15, align 8
  %26 = load i32*, i32** %16, align 8
  %27 = load i32, i32* %17, align 4
  %28 = load i8*, i8** %18, align 8
  %29 = call i32 @dialog_textbox(i8* %20, i8* %21, i32 %22, i32 %23, i32* %24, i32* %25, i32* %26, i32 %27, i8* %28)
  ret i32 %29
}

declare dso_local i32 @dialog_clear(...) #1

declare dso_local i32 @dialog_textbox(i8*, i8*, i32, i32, i32*, i32*, i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
